RESOLVED FIXED119717
[CSS Grid Layout] 2 span positions are not resolved correctly
https://bugs.webkit.org/show_bug.cgi?id=119717
Summary [CSS Grid Layout] 2 span positions are not resolved correctly
Ryosuke Niwa
Reported 2013-08-12 20:19:12 PDT
Consider merging https://chromium.googlesource.com/chromium/blink/+/2245e6b85adf3c96ef9b34dc6c92d736aaba2aac The resolution code in resolveGridPositionsFromStyle had a bug where we would check for 2 'auto' positions to determine if we needed to run the auto-placement algorithm. However the specification considers other positions as being treat as 'auto' depending on the context. Due to this glitch, we would try to explicitly resolve a 'span' position yielding to ASSERTs and the wrong result. While touching some grid parsing tests, added a real grid container so they now also test the resolution code path. Also removed some unneeded internal overrides. TEST=grid-item-bad-resolution-double-span.html
Attachments
Patch (11.43 KB, patch)
2013-10-14 01:40 PDT, Sergio Villar Senin
kling: review+
Sergio Villar Senin
Comment 1 2013-10-14 01:40:33 PDT
Sergio Villar Senin
Comment 2 2013-10-14 01:59:25 PDT
Note You need to log in before you can comment on or make changes to this bug.