[CSS Grid Layout] 2 span positions are not resolved correctly https://bugs.webkit.org/show_bug.cgi?id=119717

Reviewed by Andreas Kling.

From Blink r155397 by <jchaffraix@chromium.org>

Source/WebCore:

Test: fast/css-grid-layout/grid-item-bad-resolution-double-span.html

Two opposite 'span' or 'auto' positions should be resolved using
the auto placement algorithm. We were only checking for the 'auto'
case. This also covers the case of other positions that, according
to the spec, should be treated as 'auto'.

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::resolveGridPositionsFromStyle):

LayoutTests:

Added a new test case to check bad grid items resolution with two
opposite span positions. Also added a real grid container to check
also the resolution code path in some other tests.

* fast/css-grid-layout/grid-item-area-get-set.html: Added a grid container.
* fast/css-grid-layout/grid-item-bad-resolution-double-span-expected.txt: Added.
* fast/css-grid-layout/grid-item-bad-resolution-double-span.html: Added.
* fast/css-grid-layout/grid-item-end-after-get-set.html: Added a grid container.
* fast/css-grid-layout/grid-item-start-before-get-set.html: Ditto.

Canonical link: https://commits.webkit.org/140858@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157389 268f45cc-cd09-0410-ab3c-d52691b4dbfc